--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     implementation presentationDependencies.okHttpInterceptor
 
     implementation presentationDependencies.rxAndroid
+    implementation presentationDependencies.retrofitRxAdapter
 }
