--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,7 +7,6 @@ ext {
     lifeCycleVersion = "2.1.0-alpha01"
     constraintLayout = "1.1.3"
     androidXVersion = "1.0.0"
-    navigationVersion = "1.0.0"
     supportLibraryVersion = "1.0.0"
 
     //Libraries
@@ -28,6 +27,7 @@ ext {
     guavaVersion = "28.0-android"
     guavaProcessorVersion = "28.0-jre"
     commonCollectionsVersion = "4.0"
+    mapVersion = "17.0.0"
 
     //Testing
     jUnitVersion = "4.12"
@@ -71,6 +71,7 @@ ext {
             daggerCompiler          : "com.google.dagger:dagger-compiler:${daggerVersion}",
             daggerSupport           : "com.google.dagger:dagger-android-support:${daggerVersion}",
             daggerAndroidProcessor  : "com.google.dagger:dagger-android-processor:${daggerVersion}",
+            maps                    : "com.google.android.gms:play-services-maps:17.0.0",
             annotations             : "androidx.annotation:annotation:${androidXVersion}",
             appCompat               : "androidx.appcompat:appcompat:${androidXVersion}",
             recyclerView            : "androidx.recyclerview:recyclerview:${androidXVersion}",
@@ -86,8 +87,6 @@ ext {
             lifeCycleCommonJava     : "androidx.lifecycle:lifecycle-common-java8:${lifeCycleVersion}",
             glide                   : "com.github.bumptech.glide:glide:${glideVersion}",
             timber                  : "com.jakewharton.timber:timber:${timberVersion}",
-            navigationFragment      : "android.arch.navigation:navigation-fragment-ktx:$navigationVersion",
-            navigationUi            : "android.arch.navigation:navigation-ui-ktx:$navigationVersion",
             retrofit                : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
             retrofitRxAdapter       : "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}",
             okHttp                  : "com.squareup.okhttp3:okhttp:${okHttpVersion}",
