--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 29
@@ -64,8 +63,6 @@ dependencies {
 
     implementation presentationDependencies.timber
 
-    implementation presentationDependencies.navigationFragment
-    implementation presentationDependencies.navigationUi
     implementation presentationDependencies.glide
 
     implementation presentationDependencies.retrofit
@@ -76,4 +73,5 @@ dependencies {
 
     implementation presentationDependencies.rxAndroid
     implementation presentationDependencies.retrofitRxAdapter
+    implementation presentationDependencies.maps
 }
